# find-anything

./: .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  README.md  ROADMAP.md  install-server.sh  install-windows.ps1  install.sh
.claude/commands/: code-quality.md  commit.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  release.yml
.mise/tasks/: release
crates/client/: Cargo.toml
crates/client/src/: admin_main.rs  api.rs  batch.rs  extract.rs  path_util.rs  query_main.rs  scan.rs  scan_main.rs  subprocess.rs  upload.rs  upload_main.rs  walk.rs  watch.rs  watch_main.rs
crates/client/tests/: helpers.rs  iwork.rs  scan.rs
crates/client/tests/fixtures/: find-extract-nd1  find-extract-nd1-stdout  test.nd1  test.pages
crates/common/: Cargo.toml  build.rs
crates/common/src/: api.rs  config.rs  defaults_client.toml  defaults_server.toml  lib.rs  logging.rs  mem.rs  path.rs
crates/content-store/: Cargo.toml
crates/content-store/src/: bench.rs  lib.rs  multi_store.rs  store.rs
crates/content-store/src/sqlite_store/: db.rs  mod.rs
crates/content-store/src/zip_store/: mod.rs
crates/content-store/tests/: contract.rs
crates/extract-types/: Cargo.toml
crates/extract-types/src/: extractor_config.rs  index_line.rs  lib.rs  mem.rs  run.rs
crates/extractors/archive/: Cargo.toml
crates/extractors/archive/src/: iwork.rs  lib.rs  main.rs
crates/extractors/archive/tests/: extract.rs
crates/extractors/archive/tests/fixtures/: modern.key  modern.numbers  modern.pages  solid_block.7z
crates/extractors/dicom/: Cargo.toml
crates/extractors/dicom/src/: main.rs
crates/extractors/dispatch/: Cargo.toml
crates/extractors/dispatch/src/: lib.rs  main.rs
crates/extractors/epub/: Cargo.toml
crates/extractors/epub/src/: lib.rs  main.rs
crates/extractors/html/: Cargo.toml
crates/extractors/html/src/: lib.rs  main.rs
crates/extractors/iwork/: Cargo.toml
crates/extractors/media/: Cargo.toml
crates/extractors/media/src/: lib.rs  main.rs
crates/extractors/office/: Cargo.toml
crates/extractors/office/src/: lib.rs  main.rs
crates/extractors/pdf/: Cargo.toml
crates/extractors/pdf/src/: lib.rs  main.rs
crates/extractors/pe/: Cargo.toml
crates/extractors/pe/src/: lib.rs  main.rs
crates/extractors/text/: Cargo.toml
crates/extractors/text/src/: lib.rs  main.rs
crates/handler/: Cargo.toml
crates/handler/src/: main.rs
crates/preview-dicom/: Cargo.toml
crates/preview-dicom/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: alerts.rs  archive.rs  compaction.rs  db.rs  find_test_main.rs  fuzzy.rs  image_util.rs  lib.rs  main.rs  normalize.rs  schema_v2.sql  schema_v3.sql  schema_v4.sql  stats_cache.rs  upload.rs  worker.rs
crates/server/src/db/: constants.rs  mod.rs  search.rs  stats.rs  tree.rs
crates/server/src/routes/: admin.rs  file.rs  mod.rs  raw.rs  recent.rs  search.rs  settings.rs  stats.rs  tree.rs  upload.rs  view.rs
crates/server/src/worker/: archive_batch.rs  group.rs  mod.rs  pipeline.rs  request.rs
crates/server/tests/: admin.rs  burst_coalescing.rs  context.rs  dicom.rs  file_pagination.rs  files_search.rs  inbox_resilience.rs  index_and_search.rs  indexing_errors.rs  iwork.rs  raw.rs  recent.rs  scan_control_files.rs  search_filters.rs  search_modes.rs  stats_cache.rs  upload.rs
crates/server/tests/helpers/: mod.rs
crates/windows/service/: Cargo.toml
crates/windows/service/src/: lib.rs
crates/windows/tray/: Cargo.toml  build.rs
crates/windows/tray/src/: guid_icon.rs  main.rs  menu.rs  poller.rs  popup.rs
docs/: ARCHITECTURE.md  CLI.md  cli.md  rust-style.md  todo.md
docs/bugs/: bug-wal-deadlock-two-write-transactions.md
docs/investigations/: 005-line-offset-bug-research.md
docs/manual/: 02-configuration.md  06-file-types.md  09-troubleshooting.md
docs/plans/: 000-initial-plan.md  038-test-coverage.md  049-parallel-inbox-workers.md  054-extract-types-crate.md  061-full-server-integration-test.md  062-pluggable-extractors-and-file-types.md  063-metrics.md  064-file-type-config.md  070-security-model.md  071-testing-gaps.md  091-code-quality-refactors-3.md  092-file-viewer-virtualized-scrolling.md  093-inbox-group-coalescing.md
docs/plans/completed/: 001-resource-base-urls.md  002-complete-extractors.md  003-smart-context-retrieval.md  004-implementation-status.md  004-zip-content-storage.md  005-directory-tree.md  006-atomic-archive-deletion.md  007-bulk-operation-endpoint.md  008-lazy-context-loading.md  009-ux-improvements.md  010-pathbar-settings.md  011-enhanced-results-navigation.md  012-archive-members-as-files-BUGFIXES.md  012-archive-members-as-files.md  013-additional-content-types.md  014-markdown-frontmatter.md  015-extractor-architecture-refactor.md  016-file-watcher.md  017-ci-release-pipeline.md  018-020-format-extractors.md  021-windows-client.md  022-result-pagination.md  023-markdown-rendering.md  024-virtual-scroll.md  025-frontend-refactor.md  026-scroll-and-context-loading.md  027-statistics-dashboard.md  028-settings-page.md  028-windows-installer-linux-install.md  029-find-admin.md  030-indexing-error-reporting.md  031-fork-pdf-extract.md  032-per-directory-indexing-control.md  033-content-deduplication.md  034-7z-oom-crash.md  035-lazy-extraction-header-logging.md  036-subprocess-extraction-oom-isolation.md  039-serve-original-files.md  040-refactor-reduce-complexity.md  041-global-ctrlp-multisource-tree.md  (+37 more)
docs/superpowers/specs/: 2026-03-16-inline-safe-extractors-design.md
docs/systemd/: README.md
docs/windows/: README.md
examples/: client.toml  server.toml
install/: build-wsl-cross.sh  copy-windows.sh
packaging/windows/: find-anything.iss  install-handler.ps1  scan-and-start.bat
web/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: About.svelte  AdminPanel.svelte  AdvancedSearch.svelte  AudioViewer.svelte  CodeViewer.svelte  CommandPalette.svelte  DirListing.svelte  DirTypeahead.svelte  DirectHeader.svelte  DirectImageViewer.svelte  FileView.svelte  (+60 more)
(+6 files in other folders)
