[workspace]
members = [
    "crates/common",
    "crates/extract-types",
    "crates/content-store",
    "crates/server",
    "crates/client",
    "crates/extractors/text",
    "crates/extractors/pdf",
    "crates/extractors/media",
    "crates/extractors/archive",
    "crates/extractors/html",
    "crates/extractors/office",
    "crates/extractors/epub",
    "crates/extractors/pe",
    "crates/extractors/dicom",
    "crates/extractors/dispatch",
    "crates/extractors/iwork",
    "crates/preview-dicom",
    "crates/windows/service",
    "crates/windows/tray",
    "crates/handler",
]
resolver = "2"

[profile.dev]
# Discard debug symbols — saves ~90 GB of target/debug bloat.
# Re-enable with `debug = true` if you need a debugger.
debug = false

[workspace.dependencies]
anyhow          = "1"
blake3          = "1"
clap            = { version = "4", features = ["derive"] }
libc            = "0.2"
serde           = { version = "1", features = ["derive"] }
serde_json      = { version = "1", features = ["preserve_order"] }
serde_ignored   = "0.1"
toml            = "0.8"
tokio           = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net", "time", "io-util", "process", "sync", "signal"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
regex           = "1"
nucleo-matcher  = "0.3"
walkdir         = "2"
globset         = "0.4"
content_inspector = "0.2"
