[package]
name = "find-client"
version = "0.5.5"
edition = "2021"

[[bin]]
name = "find-scan"
path = "src/scan_main.rs"

[[bin]]
name = "find-watch"
path = "src/watch_main.rs"

[[bin]]
name = "find-anything"
path = "src/query_main.rs"

[[bin]]
name = "find-admin"
path = "src/admin_main.rs"

[[bin]]
name = "find-upload"
path = "src/upload_main.rs"

[dependencies]
find-common            = { path = "../common" }
find-extract-dispatch  = { path = "../extractors/dispatch" }
find-extract-archive   = { path = "../extractors/archive" }
# media still needed directly for detect_kind (is_image_ext / is_audio_ext / is_video_ext)
find-extract-media     = { path = "../extractors/media" }
# pdf and pe still needed directly for detect_kind (accepts())
find-extract-pdf       = { path = "../extractors/pdf" }
find-extract-pe        = { path = "../extractors/pe" }
anyhow      = { workspace = true }
blake3      = { workspace = true }
clap        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
walkdir     = { workspace = true }
globset     = { workspace = true }

reqwest     = { version = "0.13", features = ["json", "rustls", "query"], default-features = false }
notify      = "8"
toml        = { workspace = true }
tracing-subscriber = { workspace = true }
colored     = "3"
flate2      = "1"

[target.'cfg(windows)'.dependencies]
find-windows-service = { path = "../windows/service" }
windows-service = "0.8"
