[package]
name = "find-client"
version = "0.7.4"
edition = "2021"

[[bin]]
name = "find-scan"
path = "src/scan_main.rs"

[[bin]]
name = "find-watch"
path = "src/watch_main.rs"

[[bin]]
name = "find-anything"
path = "src/query_main.rs"

[[bin]]
name = "find-admin"
path = "src/admin_main.rs"

[[bin]]
name = "find-upload"
path = "src/upload_main.rs"

[dependencies]
find-common            = { path = "../common" }
find-extract-types     = { path = "../extract-types" }
find-extract-dispatch  = { path = "../extractors/dispatch" }
find-extract-archive   = { path = "../extractors/archive" }
# media still needed directly for detect_kind (is_image_ext / is_audio_ext / is_video_ext)
find-extract-media     = { path = "../extractors/media" }
find-extract-html      = { path = "../extractors/html" }
find-extract-office    = { path = "../extractors/office" }
# pdf, pe, and dicom still needed directly for detect_kind (accepts())
find-extract-pdf       = { path = "../extractors/pdf" }
find-extract-pe        = { path = "../extractors/pe" }
find-extract-dicom     = { path = "../extractors/dicom" }
anyhow      = { workspace = true }
blake3      = { workspace = true }
clap        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
walkdir     = { workspace = true }
globset     = { workspace = true }

reqwest     = { version = "0.13", features = ["json", "rustls", "query"], default-features = false }
notify      = "8"
toml        = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender   = { workspace = true }
chrono      = "0.4"
colored     = "3"
flate2      = "1"
tempfile    = "3"

[lib]
name = "find_client"
path = "src/lib.rs"

[dev-dependencies]
find-server = { path = "../server" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
axum = "0.8"
filetime = "0.2"

[target.'cfg(windows)'.dependencies]
find-windows-service = { path = "../windows/service" }
windows-service = "0.8"
