[package]
name = "find-common"
version = "0.5.3"
edition = "2021"

[dependencies]
anyhow          = { workspace = true }
tracing         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
serde_ignored   = { workspace = true }
toml            = { workspace = true }
libc            = { workspace = true }
tracing-subscriber = { workspace = true }
regex           = { workspace = true }
tokio           = { workspace = true }
