[package]
name = "find-common"
version = "0.7.2"
edition = "2021"

[dependencies]
find-extract-types = { path = "../extract-types" }
anyhow          = { workspace = true }
tracing         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
serde_ignored   = { workspace = true }
toml            = { workspace = true }
libc            = { workspace = true }
tracing-subscriber = { workspace = true }
regex           = { workspace = true }
tokio           = { workspace = true }
