[package]
name = "find-content-store"
version = "0.7.6"
edition = "2021"

[lib]
name = "find_content_store"
path = "src/lib.rs"

[dependencies]
find-common = { path = "../common" }
anyhow      = { workspace = true }
tracing     = { workspace = true }
rusqlite    = { version = "0.38", features = ["bundled", "functions"] }
rand        = { version = "0.9", features = ["std_rng"] }
flate2      = "1"

[dev-dependencies]
tempfile = "3"
