[package]
name = "find-server"
version = "0.5.3"
edition = "2021"

[[bin]]
name = "find-server"
path = "src/main.rs"

[dependencies]
find-common   = { path = "../common" }
anyhow        = { workspace = true }
clap          = { version = "4", features = ["derive", "env"] }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
nucleo-matcher = { workspace = true }

axum          = "0.8"
tower         = "0.5"
tower-http    = { version = "0.6", features = ["trace", "cors"] }
rusqlite      = { version = "0.38", features = ["bundled", "functions"] }
tracing-subscriber = { workspace = true }
toml          = { workspace = true }
regex           = { workspace = true }
form_urlencoded  = "1"

# Web UI embedding
rust-embed   = { version = "8", features = ["axum"] }
mime_guess   = "2"

# ZIP archive management and async processing
zip           = "2"
flate2        = "1"
uuid          = { version = "1", features = ["v4"] }
chrono        = "0.4"
tokio-util    = { version = "0.7", features = ["io"] }
# Only tiff (decode) + png (encode) needed for the convert=png endpoint.
# Default features include avif/rav1e (an AV1 encoder, ~90 transitive deps) — disable them.
image         = { version = "0.25", default-features = false, features = ["tiff", "png"] }
