[package]
name = "find-extract-archive"
version = "0.7.3"
edition = "2021"

[lib]
name = "find_extract_archive"
path = "src/lib.rs"

[[bin]]
name = "find-extract-archive"
path = "src/main.rs"

[dependencies]
find-extract-types = { path = "../../extract-types" }
# Unified dispatch handles all member extraction
find-extract-dispatch = { path = "../dispatch" }
# Still needed for accepts() and is_archive_ext()
find-extract-media = { path = "../media" }

anyhow = { workspace = true }
globset = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Archive formats
zip = "8"
snap = "1"
tar = "0.4"
flate2 = "1"
bzip2 = "0.6"
xz2 = { version = "0.1", features = ["static"] }
sevenz-rust2 = "0.20"

tempfile = "3"
walkdir = { workspace = true }
tracing-subscriber = { workspace = true }

