[package]
name = "find-extract-dispatch"
version = "0.6.2"
edition = "2021"

[lib]
name = "find_extract_dispatch"
path = "src/lib.rs"

[[bin]]
name = "find-extract-dispatch"
path = "src/main.rs"

[dependencies]
find-extract-types = { path = "../../extract-types" }
find-extract-text  = { path = "../text" }
find-extract-pdf   = { path = "../pdf" }
find-extract-media = { path = "../media" }
find-extract-html  = { path = "../html" }
find-extract-office = { path = "../office" }
find-extract-epub  = { path = "../epub" }
find-extract-pe    = { path = "../pe" }

anyhow               = { workspace = true }
tracing              = { workspace = true }
tracing-subscriber   = { workspace = true }
serde_json           = { workspace = true }
infer                = "0.19"
