[package]
name = "find-extract-epub"
version = "0.5.5"
edition = "2021"

[lib]
name = "find_extract_epub"
path = "src/lib.rs"

[[bin]]
name = "find-extract-epub"
path = "src/main.rs"

[dependencies]
find-common = { path = "../../common" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

zip = "2"
quick-xml = "0.37"
tempfile = "3"
tracing-subscriber = { workspace = true }
