[package]
name = "find-extract-epub"
version = "0.6.1"
edition = "2021"

[lib]
name = "find_extract_epub"
path = "src/lib.rs"

[[bin]]
name = "find-extract-epub"
path = "src/main.rs"

[dependencies]
find-extract-types = { path = "../../extract-types" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

zip = "8"
quick-xml = "0.37"
tempfile = "3"
tracing-subscriber = { workspace = true }
