[package]
name = "find-extract-html"
version = "0.7.2"
edition = "2021"

[lib]
name = "find_extract_html"
path = "src/lib.rs"

[[bin]]
name = "find-extract-html"
path = "src/main.rs"

[dependencies]
find-extract-types = { path = "../../extract-types" }
anyhow = { workspace = true }
serde = { workspace = true }

scraper = "0.21"
