[package]
name = "find-extract-media"
version = "0.7.4"
edition = "2021"

[lib]
name = "find_extract_media"
path = "src/lib.rs"

[[bin]]
name = "find-extract-media"
path = "src/main.rs"

[dependencies]
find-extract-types = { path = "../../extract-types" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Image EXIF
kamadak-exif = "0.5"

# Audio metadata (tags + technical stream info)
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",     # MP3
    "flac",    # FLAC
    "ogg",     # OGG container (Vorbis, Opus)
    "vorbis",  # Vorbis codec (OGG streams)
    "wav",     # WAV (also enables pcm)
    "isomp4",  # M4A / MP4 container
    "aac",     # AAC codec
] }

# Video metadata
nom-exif = "2"

# For writing archive member bytes to a temp file before extracting
tempfile = "3"
