[package]
name = "find-extract-office"
version = "0.6.2"
edition = "2021"

[lib]
name = "find_extract_office"
path = "src/lib.rs"

[[bin]]
name = "find-extract-office"
path = "src/main.rs"

[dependencies]
find-extract-types = { path = "../../extract-types" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

zip = "8"
quick-xml = "0.37"
calamine = "0.26"
tempfile = "3"
tracing-subscriber = { workspace = true }
