[package]
name = "find-extract-office"
version = "0.8.0"
edition = "2021"

[lib]
name = "find_extract_office"
path = "src/lib.rs"

[[bin]]
name = "find-extract-office"
path = "src/main.rs"

[dependencies]
find-extract-types = { path = "../../extract-types" }
anyhow = { workspace = true }
serde = { workspace = true }

zip = "8"
quick-xml = "0.41"
calamine = "0.35"
tempfile = "3"
