[package]
name = "find-extract-pdf"
version = "0.6.2"
edition = "2021"

[lib]
name = "find_extract_pdf"
path = "src/lib.rs"

[[bin]]
name = "find-extract-pdf"
path = "src/main.rs"

[dependencies]
find-extract-types = { path = "../../extract-types" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
pdf-extract = { git = "https://github.com/jamietre/pdf-extract", rev = "7312171" }
